# log-warper

./: .gitignore  .travis.yml  CHANGES.md  README.md  cabal.project  log-warper.cabal  logger-config-example.yaml  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.8.2.yaml  stack-nightly.yaml  stack.yaml
examples/: HowTo.lhs  HowTo.md  Playground.hs  PureLogging.md
log-warper/: CHANGES.md  README.md  log-warper.cabal  logger-config-example.yaml
log-warper-core/: CHANGES.md  README.md  log-warper-core.cabal
log-warper-core/src/Log/: Core.hs
log-warper-core/src/Log/Core/: Action.hs  Class.hs
log-warper-core/src/Logw/: Core.hs
log-warper-core/src/Logw/Core/: Action.hs  Class.hs
log-warper/examples/: HowTo.md  Playground.hs  PureLogging.lhs  PureLogging.md  how-to-log-config.yaml
log-warper/src/: Log.hs  Logw.hs
log-warper/src/Log/: Actions.hs  Configuration.hs  Event.hs  Fmt.hs  Monad.hs  Name.hs  Pure.hs  Severity.hs  Terminal.hs
log-warper/src/Log/Actions/: Rotation.hs  Terminal.hs
log-warper/src/Log/Configuration/: Extension.hs  Rotation.hs  Type.hs
log-warper/src/Logw/: Actions.hs  Concurrent.hs  Configuration.hs  Event.hs  Fmt.hs  Monad.hs  Name.hs  Pure.hs  Severity.hs
log-warper/src/Logw/Actions/: Rotation.hs  Terminal.hs
log-warper/src/Logw/Configuration/: Extension.hs  Rotation.hs  Type.hs
src/System/: HSLOGGER_LICENSE  Wlog.hs
src/System/Log/: Formatter.hs  Handler.hs  Logger.hs
src/System/Log/Handler/: Simple.hs  Syslog.hs
src/System/Wlog/: CanLog.hs  Color.hs  Concurrent.hs  Exception.hs  FileUtils.hs  Formatter.hs  Handler.hs  HasLoggerName.hs  IOLogger.hs  Launcher.hs  LogHandler.hs  Logger.hs  LoggerConfig.hs  LoggerName.hs  LoggerNameBox.hs  LoggerRotation.hs  MemoryQueue.hs  Parser.hs  PureLogging.hs  Roller.hs  Severity.hs  Terminal.hs  Wrapper.hs
src/System/Wlog/Handler/: Roller.hs  Simple.hs  Syslog.hs
src/System/Wlog/LogHandler/: Roller.hs  Simple.hs  Syslog.hs
test/: Test.hs
test/Test/Wlog/: RollingSpec.hs
