name:                log-warper
version:             2.0
synopsis:            Flexible, configurable, monadic and pretty logging
description:         This package implements hierarchical and extensible logging over log-warper-core
homepage:            https://github.com/serokell/log-warper
license:             MPL-2.0
license-file:        LICENSE
author:              @serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016-2018 Serokell
category:            Logging
extra-source-files:  CHANGES.md
                   , README.md
                   , examples/HowTo.md
                   , examples/HowTo.lhs
                   , examples/PureLogging.md
                   , examples/PureLogging.lhs
stability:           experimental
build-type:          Simple
cabal-version:       >=2.0
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.1

library
  exposed-modules:     Logw
                         Logw.Actions
                           Logw.Actions.Terminal
                         Logw.Configuration
                           Logw.Configuration.Extension
                           Logw.Configuration.Rotation
                           Logw.Configuration.Type
                         Logw.Event
                         Logw.Fmt
                         Logw.Monad
                         Logw.Name
                         Logw.Pure
                         Logw.Severity
--                         Log.CanLog
--                         Log.Concurrent
--                         Log.Exception
--                         Log.IOLogger
--                         Log.Launcher
--                         Log.LogHandler
--                             Log.LogHandler.Roller
--                             Log.LogHandler.Simple
--                         Log.Terminal

  build-depends:       base >= 4.9 && < 5
                     , log-warper-core >= 2.0

                     , aeson >= 1.2
                     , ansi-terminal >= 0.7 && < 0.9
                     , containers >= 0.5.7.1
                     , filepath >= 1.4.1
                     , fmt ^>= 0.5.0.0
                     , microlens-platform >= 0.3.9
                     , mtl >= 2.0
                     , text >= 1.2.2.0 && < 1.4
                     , time >= 1.8
                     , universum ^>= 1.1.0
                     , unordered-containers >= 0.2.7.1
                     , vector >= 0.12
                     , yaml >= 0.8.20

--                     , deepseq              ^>= 1.4
--                     , directory            ^>= 1.3
--                     , lifted-async         ^>= 0.9
--                     , monad-loops          ^>= 0.4.3
--                     , o-clock              ^>= 0.1.1
--                     , transformers         ^>= 0.5.2
--                     , transformers-base    ^>= 0.4.4

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  default-extensions:  BangPatterns
                       DeriveGeneric
                       LambdaCase
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       MultiParamTypeClasses
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TypeFamilies
                       RecordWildCards

executable play-log
  hs-source-dirs:      examples
  main-is:             Playground.hs

  build-depends:       log-warper
                     , log-warper-core
                     , universum >= 1.1.0
                     , microlens >= 0.4
                     , yaml >= 0.8.20

  default-language:    Haskell2010
  ghc-options:         -threaded -Wall

-- executable how-to
--   main-is:             HowTo.lhs
--
--   build-tool-depends:  markdown-unlit:markdown-unlit
--
--   build-depends:       base           >= 4.9 && < 5
--                      , log-warper
--                      , markdown-unlit >= 0.4
--                      , text           >= 1.2.2.1
--
--   hs-source-dirs:      examples
--   default-language:    Haskell2010
--   ghc-options:         -threaded -Wall
--                        -fno-warn-orphans
--                        -pgmL markdown-unlit
--
-- executable pure-how-to
--   main-is:             PureLogging.lhs
--
--   build-tool-depends:  markdown-unlit:markdown-unlit
--   build-depends:       base           >= 4.7 && < 5
--                      , log-warper
--                      , markdown-unlit >= 0.4
--                      , mtl
--                      , text           >= 1.2.2.1
--
--   hs-source-dirs:      examples
--   default-language:    Haskell2010
--   ghc-options:         -threaded -Wall
--                        -fno-warn-orphans
--                        -pgmL markdown-unlit
--
-- test-suite log-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Test.hs
--   other-modules:       Spec
--                        Test.Wlog.RollingSpec
--
--   build-tool-depends:  hspec-discover:hspec-discover
--   build-depends:       async
--                      , base
--                      , data-default
--                      , directory
--                      , filepath
--                      , hspec
--                      , HUnit
--                      , microlens-mtl
--                      , log-warper
--                      , QuickCheck
--                      , universum
--                      , unordered-containers
--
--   default-language:    Haskell2010
--   ghc-options:         -threaded
--                        -rtsopts
--                        -Wall
--                        -fno-warn-orphans
--                        -with-rtsopts=-N
--
--   default-extensions:   DeriveDataTypeable
--                         DeriveGeneric
--                         GeneralizedNewtypeDeriving
--                         StandaloneDeriving
--                         FlexibleContexts
--                         FlexibleInstances
--                         MultiParamTypeClasses
--                         FunctionalDependencies
--                         DefaultSignatures
--                         NoImplicitPrelude
--                         OverloadedStrings
--                         RecordWildCards
--                         TypeApplications
--                         TupleSections
--                         ViewPatterns
--                         LambdaCase
--                         MultiWayIf
